--- a/scss/section1.scss
+++ b/scss/section1.scss
@@ -3,9 +3,8 @@
     width: 100%;
 
     padding: 60px 0;
-    font-family: Montserrat;
 
-    background: url("../app/img/photo-1480714378408-67cf0d13bc1b@2x.png");
+    background: url("/app/img/photo-1480714378408-67cf0d13bc1b@2x.png");
     @include bg-img-atr;
 
     &::before {
