--- a/scss/section4.scss
+++ b/scss/section4.scss
@@ -1,7 +1,6 @@
 .section-4 {
     background: #1C1C1C;
 
-    font-family: Montserrat;
     height: 560px;
 
     padding: 30px 0;
@@ -40,8 +39,7 @@
 
                 p {
                     margin-top: 25px;
-                    font-size: 14px;
-                    line-height: 20px;
+                    @include font14-20;
                 }
 
             }
@@ -85,8 +83,7 @@
                         }
 
                         p {
-                            font-size: 14px;
-                            line-height: 20px;
+                            @include font14-20;
                         }
                     }
                 }
