--- a/scss/section7.scss
+++ b/scss/section7.scss
@@ -22,7 +22,7 @@
 
         .section-7-bottom{
             .swiper{
-                width: 920px;
+                max-width: 1000px;
                 height: 350px;
 
                 .swiper-wrapper {
