--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @import "varAndMixins";
 @import "general";
-@import "heading";
+@import "nav";
 @import "section1";
 @import "section2";
 @import "section3";
@@ -10,4 +10,3 @@
 @import "section7";
 @import "section8";
 @import "section9";
-@import "footer";
