--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -24,6 +24,12 @@
 
         img {
             padding: 10px 0;
+
+            transition: 0.3s;
+
+            &:hover{
+                transform: scale(1.1);
+            }
         }
 
         .navigation-links {
@@ -34,13 +40,39 @@
             align-items: center;
 
             a {
+                height: 100%;
+                
+                line-height: 72px;
                 display: inline-block;
                 text-decoration: none;
                 text-transform: uppercase;
                 
+                position: relative;
+                
                 margin: 0 20px;
                 font-size: 14px;
                 color: #FFFFFF;
+
+                &::after{
+                    position: absolute;
+                    content: "";
+                    bottom: 0;
+                    left: 0;
+                    width: 105%;
+                    height: 3px;
+                    background: #E27866;
+                    transform: translateY(-3px) scale(0);
+                    transition: 0.3s;
+                }
+
+                &:hover::after{
+                    transform: scale(100%);
+                    transform:  translateY(0);
+                }
+
+                &:hover {
+                    opacity: 0.8;
+                }
             }
         }
     }
