--- a/scss/section1.scss
+++ b/scss/section1.scss
@@ -37,6 +37,12 @@
 
             .logo-section {
                 width: 250px;
+
+                transition: 0.3s;
+
+                &:hover{
+                    transform: scale(1.1);
+                }
             }
 
             h3 {
@@ -68,6 +74,14 @@
                 line-height: 42px;
                 border: 2px solid #FFFFFF;
                 color: #FFFFFF;
+
+                transition: 0.3s;
+
+                &:hover{
+                    border-radius: 10px;
+                    transform: scale(1.1);
+                    color: #E27866;
+                }
             }
         }
 
@@ -114,8 +128,7 @@
                 input {
                     width: 100%;
                     
-                    font-size: 12px;
-                    color: #D8D8D8;
+                    font-size: 14px;
                     border: none;
                     border-bottom: 1px solid #D8D8D8;
                     padding: 5px;
@@ -138,8 +151,40 @@
                 margin: 0 50px;
                 margin-bottom: 40px;
 
-                input[type="radio"] {
-                    margin-right: 4px;
+                input[type="radio"] {                    
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    appearance: none;
+
+                    position: relative;
+
+                    width: 16px;
+                    height: 16px;
+
+                    margin-right: 3px;
+                    border: 1px solid #41D395;
+                    border-radius: 100%;
+
+                    &::before{
+                        position: absolute;
+                        content: "";
+                        top: 0;
+                        left: 0;
+                        width: 14px;
+                        transform: scale(0);
+                        height: 14px;
+                        background: #41D395;
+                        border-radius: 100%;
+
+                        transition: 0.2s;
+
+                    }
+
+                    &:checked::before{
+                        transform: scale(0.6);
+                    }
+
+
                 }
 
                 label {
@@ -160,6 +205,14 @@
                 border: none;
                 background: #41D395;
                 color: #FFFFFF;
+
+                transition: 0.3s;
+
+                &:hover {
+                    cursor: pointer;
+                    text-decoration: underline;
+                    transform: scaleX(1.05);
+                }
             }
         }
     }
