--- a/scss/section9.scss
+++ b/scss/section9.scss
@@ -22,8 +22,15 @@
                 margin-left: 18%;
                 margin-right: 2px;
 
+                &:hover img{
+                    transform: scale(1.5) rotate(360deg);
+                    
+                }
+
                 img{
                     height: 30px;
+
+                    transition: 0.4s;
                 }
             }
         }
@@ -31,6 +38,12 @@
         .copyright{
             color: #FFFFFF;
             opacity: 0.5;
+
+            transition: 0.3s;
+
+            &:hover{
+                opacity: 1;
+            }
         }
     }
 }
