--- a/scss/section1.scss
+++ b/scss/section1.scss
@@ -4,7 +4,7 @@
 
     padding: 60px 0;
 
-    background: url("/app/img/photo-1480714378408-67cf0d13bc1b@2x.png");
+    background-image: url("/app/img/photo-1480714378408-67cf0d13bc1b@2x.jpg");
     @include bg-img-atr;
 
     &::before {
