--- a/scss/section7.scss
+++ b/scss/section7.scss
@@ -54,7 +54,7 @@
                             justify-content: flex-end;
 
                             .review-top {
-                                background: url("/app/img/u229.png");
+                                background: url("../../app/img/u229.png");
                                 @include bg-img-atr;
 
                                 position: relative;
