--- a/scss/section3.scss
+++ b/scss/section3.scss
@@ -139,7 +139,7 @@
                 }
 
                 &:hover{
-                        cursor: url("../img/description-cursor-icon-with-shadow-32.png"), auto;
+                        cursor: url(".././img/description-cursor-icon-with-shadow-32.png"), auto;
                         transform: scale(1.1);
                 }
 
