--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -20,8 +20,6 @@
         justify-content: space-between;
         align-items: center;
 
-    
-
         img {
             padding: 10px 0;
 
@@ -72,6 +70,7 @@
 
                 &:hover {
                     opacity: 0.8;
+                    cursor: pointer;
                 }
             }
         }
