--- a/scss/section2.scss
+++ b/scss/section2.scss
@@ -44,6 +44,7 @@
 
                 &:hover img{
                     transform: scale(1.5) rotate(360deg);
+                    cursor: pointer;
                     
                 }
 
