--- a/scss/section4.scss
+++ b/scss/section4.scss
@@ -64,12 +64,12 @@
                     }
 
                     &:hover .icon i{
-                        color: #E27866;
+                        color: $my-orange;
                         background: none;
                     }
 
                     &:hover .title-n-text h5 {
-                        border-bottom: 4px solid #E27866;
+                        border-bottom: 4px solid $my-orange;
                     }
 
                     .icon {
@@ -80,7 +80,7 @@
                             align-self: flex-start;
                             width: 50px;
                             height: 50px;
-                            background: #E27866;
+                            background: $my-orange;
                             border-radius: 100%;
                             color: white;
                             line-height: 50px;
