--- a/scss/section5.scss
+++ b/scss/section5.scss
@@ -51,11 +51,11 @@
                 }
 
                 i{
-                    color: #E27866;
+                    color: $my-orange;
                     width: 50px;
                     height: 50px;
                     border-radius: 100%;
-                    border: 1px solid #E27866;
+                    border: 1px solid $my-orange;
                     line-height: 50px;
                     text-align: center;
                     font-size: 19px;
