--- a/scss/section9.scss
+++ b/scss/section9.scss
@@ -24,6 +24,7 @@
 
                 &:hover img{
                     transform: scale(1.5) rotate(360deg);
+                    cursor: pointer;
                     
                 }
 
