--- a/scss/section1.scss
+++ b/scss/section1.scss
@@ -37,7 +37,7 @@
             .logo-section {
                 width: 250px;
 
-                transition: 0.3s;
+                transition: 0.5s;
 
                 &:hover{
                     transform: scale(1.1);
@@ -94,25 +94,33 @@
             flex-direction: column;
             justify-content: space-between;
 
+            margin-left: 20px;
             box-shadow: 0px 5px 20px #00000029;
             border-radius: 5px;
             background: #FFFFFF;
             overflow: hidden;
 
             h4 {
+                width: 100%;
+
+                @include flex-prefix;
+                justify-content: center;
+                align-items: center;
+                
                 height: 57px;
                 margin: 0;
-                line-height: 57px;
-                font-size: 20px;
-                padding: 0 50px;
                 background: #F5F5F5;
-                color: #333333;
 
                 &:hover{
                     cursor: default;
                 }
 
-                span {
+                #section-1-h4{
+                    font-size: 20px;
+                    color: #333333;
+                }
+
+                #free {
                     text-transform: uppercase;
                     color: $my-orange;
 
