--- a/scss/section3.scss
+++ b/scss/section3.scss
@@ -1,7 +1,7 @@
 .section-3{
     .swiper {
         position: relative;
-        width: 83%;
+        width: 90%;
         height: 100%;
 
         &:hover{
@@ -10,73 +10,107 @@
 
         .swiper-wrapper {
             .swiper-slide {
+                width: 100%;
                 @include flex-prefix;
                 justify-content: space-between;
+                align-items: center;
 
                 margin-right: 0;
                 
                 h3 {
-                    max-height: 110px;
                     color: #FFFFFF;
-                    font-size: 36px;
-                    line-height: 40px;
+                    font-size: 30px;
+                    margin: 0;
                 }
 
                 p {
                     color: #FFFFFF;
                     @include font14-20;
+
+                    margin: 0;
+                    
+                    &:last-of-type{
+                        align-self: flex-start;
+                    }
                 }
 
                 .swiper-text{
-                    max-width: 57%
+                    max-width: 57%;
+                    display: grid;
+                    grid-template-rows: repeat(3, minmax(40px, 100px));
+                    grid-gap: 20px;
+                    align-items: center;
                 }
 
-                .section-3-imgs {
-                    @include flex-prefix;
-                    flex-direction: column;
-                    align-items: flex-end;
-                    position: relative;
-                    height: 98%;
-                    width: 38%;
+                .section-3-imgs{
+                    width: 50%;
 
-                    .section-3-imgs-top{
-                        @include flex-prefix;
+                    display: grid;
+                    grid-template-columns: repeat(2, minmax(100px, 200px));
+                    grid-template-rows: repeat(2, minmax(100px, 180px));
+                    grid-gap: 11px;
+                    justify-content: flex-end;
 
-                        margin: 0;
-                    }
+                    margin-left: 15px;
 
-                    a{
-                        height: 168px;
-
+                    .square{
                         position: relative;
-                        display: inline-block;
+                        &:nth-of-type(1){
+                            grid-column: 1;
+                            grid-row: 1;
 
-                        margin: 10px;
+                            background: url("../../app/img/cabage.png");
+                            background-position: center;
+                            background-size: 100% 100%;
 
-                        transition: 0.3s;
+                        }
 
+                        &:nth-of-type(2){
+                            grid-column: 2;
+                            grid-row: 1;
+
+                            background: url("../../app/img/vegetables.png");
+                            background-position: center;
+                            background-size: 100% 100%;
+                        }
+
+                        &:nth-of-type(3){
+                            grid-column: 1 /3;
+                            grid-row: 2;
+
+                            background: url("../../app/img/step.png");
+                            background-position: center;
+                            background-size: 100% 100%;
+                        }
+                        
                         &::after{
+                            @include flex-prefix;
+                            justify-content: center;
+                            align-items: center;
                             position: absolute;
+
                             content: "Explore";
-                            color: #FFFFFF;
-                            text-align: center;
-                            line-height: 168px;
+                            color: white;
                             font-size: 20px;
+
                             top: 0;
                             left: 0;
+
                             width: 100%;
                             height: 100%;
-                            background: #e2786686;
+                            background: $my-orange;
                             opacity: 0;
+
+                            transition: 0.3s;
+
                         }
 
                         &:hover{
-                                cursor: url("../../app/img/description-cursor-icon-with-shadow-32.png"), auto;
-                                transform: scale(1.1);
+                            cursor: url("../../app/img/description-cursor-icon-with-shadow-32.png"), auto;
                         }
 
                         &:hover::after{
-                            opacity: 1;
+                            opacity: 0.7;
                         }
                     }
                 }
@@ -118,7 +152,9 @@
         .swiper-buttons {
             position: relative;
 
-            height: 100%;
+            height: 96%;
+
+            margin-right: 40px;
 
             @include flex-prefix;
             flex-direction: column;
@@ -129,6 +165,7 @@
                 height: 100px;
 
                 border: none;
+                border-radius: 6px;
 
                 background: #A37169;
 
@@ -137,7 +174,7 @@
                 &:hover{
                     cursor: pointer;
                     background: $my-orange;
-                    border-radius: 6px;
+                    border-radius: 0;
 
                     transform: scale(1.1);
                 }
