--- a/scss/section1.scss
+++ b/scss/section1.scss
@@ -173,8 +173,8 @@
 
                     position: relative;
 
-                    width: 16px;
-                    height: 16px;
+                    min-width: 16px;
+                    min-height: 16px;
 
                     margin-right: 3px;
                     border: 1px solid $my-green;
