--- a/scss/media.scss
+++ b/scss/media.scss
@@ -1,17 +1,34 @@
-@media (min-width: 800px) and (max-width: 1140px){
+@media (min-width: 800px) and (max-width: 1024px){
     #section-1-h4{
         font-size: 18px !important;
-        text-align: center;
+        text-align: center !important;
     }
     .swiper-buttons{
         margin-right: 25px !important;
-    }
 
+        button{
+            transform: scale(0.9) !important;
+        }
+    }
+    
     .swiper-text{
-        grid-gap: 30px !important;
+        grid-gap: 26px !important;
+        align-self: flex-end !important;
         h3{
             line-height: 30px !important;
             font-size: 26px !important;
         }
+    }
+}
+
+@media (max-width: 800px){
+    .navigation-links{
+        .top-menu-button{
+            display: none !important;
+        }
+    }
+
+    #burger{
+        display: block !important;
     }
 }
