--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -9,7 +9,7 @@
     z-index: 4;
 
     width: 100%;
-    height: 72px;
+    height: 74px;
 
     background: #1C1C1C;
 
@@ -73,6 +73,68 @@
                     cursor: pointer;
                 }
             }
+
+            #burger{
+                width: 35px;
+                display: none;
+                opacity: 0.8;
+
+                transition: 0.3s;
+
+                &:hover{
+                    opacity: 1;
+                    cursor: pointer;
+                    transform: scale(1.1);
+                }
+            }
         }
     }
 }
+
+.open{
+    transform: translateX(0) !important;
+    opacity: 1 !important;
+}
+
+.side-menu{
+        position: -webkit-sticky;
+        position: -moz-sticky;
+        position: -ms-sticky;
+        position: -o-sticky;
+        position: sticky;
+
+        transform: translateX(-200px);
+        opacity: 0;
+
+        width: 30%;
+        height: 100vh;
+
+        background: #1C1C1C;
+
+        .navigation-links{
+            @include flex-prefix;
+            flex-direction: column;
+            align-items: center;
+
+            .side-menu-button{
+                height: 60px;
+                
+                line-height: 60px;
+                display: inline-block;
+                text-decoration: none;
+                text-transform: uppercase;
+                margin: 10px 20px;
+                font-size: 18px;
+                color: #FFFFFF;
+
+                transition: 0.3s;
+
+                &:hover {
+                    cursor: pointer;
+                    color: $my-orange;
+                    text-decoration: underline;
+                }
+            }
+        }
+}
+
