--- a/scss/section4.scss
+++ b/scss/section4.scss
@@ -1,9 +1,9 @@
 .section-4 {
     background: #1C1C1C;
 
-    height: 560px;
+    max-height: 700px;
 
-    padding: 30px 0;
+    padding: 40px 0;
 
     .section-4-container {
         @include container;
