--- a/scss/section6.scss
+++ b/scss/section6.scss
@@ -1,5 +1,5 @@
 .section-6{
-    height: 750px;
+    max-height: 800px;
     width: 100%;
     
     color: #FFFF;
@@ -42,7 +42,8 @@
             width: 80%;
 
             article {
-                width: 30%;
+                min-width: 30%;
+
 
                 border-radius: 5px;
                 overflow: hidden;
