--- a/scss/media.scss
+++ b/scss/media.scss
@@ -29,6 +29,7 @@
         }
     }
 }
+
 // ==================================================
 // MOBILE
 @media (max-width: 800px){
@@ -38,23 +39,28 @@
             display: none !important;
         }
     }
-
     #burger{
         display: block !important;
     }
 
     // SECTION 1
-    .section-1-container{
-        flex-direction: column;
+    .section-1{
+        padding-top: 30px;
+        .section-1-container{
+            flex-direction: column;
 
-        article{
-            a{
-                margin: 0 auto;
+            article{
+                align-items: center;
+                text-align: center;
+                a{
+                    margin: 0 auto;
+                }
             }
-        }
 
-        form {
-            margin-top: 50px;
+            form {
+                margin: 0 !important;
+                margin-top: 40px !important;
+            }
         }
     }
 
@@ -65,7 +71,7 @@
         align-items: center !important;
         text-align: center;
 
-        height: 150px !important;
+        height: 180px !important;
 
         p{
             max-width: 100% !important;
@@ -75,7 +81,7 @@
             width: 90% !important;
             justify-content: center !important;
 
-            margin-top: 8px;
+            margin-top: 15px;
 
             a{
                 margin-left: 40px !important;
@@ -91,21 +97,24 @@
 
 
         .swiper{
+            height: 95%;
             .swiper-slide{
                 flex-direction: column !important;
                 align-items: center !important;
                 justify-content: center !important;
                 .swiper-text{
+                    padding: 5px !important;
                     max-width: 100% !important;
                     grid-template-rows: 1fr 1fr 60px !important;
                     grid-gap: 5px !important;
                 }
 
                 .section-3-imgs{
-                    grid-template-columns: repeat(2, minmax(100px, 200px)) !important;
-                    grid-template-rows: repeat(2, minmax(100px, 200px)) !important;
+                    grid-template-columns: repeat(2, minmax(100px, 160px)) !important;
+                    grid-template-rows: repeat(2, minmax(100px, 160px)) !important;
+
                     width: 100% !important;
-                    justify-content: center !important;
+
                     margin-left: 0 !important;
                     margin-top: 10px;
                 }
@@ -120,12 +129,17 @@
         .swiper-buttons{
             flex-direction: row !important;
             height: 10% !important;
-            width: 87% !important;
+            width: 300px !important;
 
-            margin-right: 0 !important;
-            margin-top: 30px !important;
+            margin-right: 3px !important;
+
+            button{
+                width: 87px !important;
+                height: 87px !important;
+            }
         }
     }
+
     // SECTION 4
     .section-4{
         .section-4-container{
@@ -149,6 +163,7 @@
             }
         }
     }
+
     // SECTION 5
     .section-5{
         max-height: 1200px;
@@ -174,9 +189,11 @@
             }
         }
     }
+
     // SECTION 6
     .section-6{
         max-height: 2000px;
+        padding-top: 10px;
         .section-6-container{
             .section-6-top{
                 margin-bottom: 5px;
@@ -193,6 +210,7 @@
             }
         }
     }
+
     // Section 7
     .section-7{
         .swiper-slide{
@@ -200,12 +218,14 @@
             justify-content: center !important;
         }
     }
+
     // SECTION 8
     .section-8{
         form{
             width: 280px !important;
         }
     }
+
     // SECTION 9
     .section-9{
         .section-9-container{
