--- a/scss/section1.scss
+++ b/scss/section1.scss
@@ -75,8 +75,10 @@
                 color: #FFFFFF;
 
                 transition: 0.3s;
+                z-index: 4;
 
                 &:hover{
+                    cursor: pointer;
                     border-radius: 10px;
                     transform: scale(1.1);
                     color: $my-orange;
@@ -87,7 +89,7 @@
         form {
             position: relative;
 
-            width: 360px;
+            max-width: 360px;
             height: 100%;
 
             @include flex-prefix;
