--- a/scss/section7.scss
+++ b/scss/section7.scss
@@ -13,6 +13,7 @@
                 font-size: 36px;
                 line-height: 43px;
                 margin-bottom: 30px;
+                font-weight: 600;
             }
 
             img {
